# TFM-MICHELL-BORNIO-MORENO-1124

./: 01_configuration.ipynb  02_data_understanding.ipynb  03_eda.ipynb  04_preprocessing.ipynb  05_feature_engineering.ipynb  06_modeling.ipynb  07_interpretability.ipynb  08_conclusiones_finales.ipynb  LICENSE  main.ipynb  pyproject.toml
