[project]
name = "heart-disease-classification"
version = "0.1.0"
description = "Machine Learning classification models for heart disease prediction"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    # Core Data Science
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "polars>=0.19.0",  # Alternativa rápida a pandas
    
    # Parquet Support
    "pyarrow>=14.0.0",  # Requerido para soporte de Parquet
    "fastparquet>=2023.10.0",  # Alternativa para soporte de Parquet

    # Machine Learning - Classical
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.1.0",
    "catboost>=1.2.0",

    # Imbalanced Data Handling
    "imbalanced-learn>=0.11.0",

    # Deep Learning (opcional pero útil)
    "tensorflow>=2.15.0",
    "keras>=3.0.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "missingno>=0.5.2",  # Visualizar datos faltantes

    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "ipykernel>=6.26.0",
    "ipywidgets>=8.1.0",

    # Model Interpretation & Explainability
    "shap>=0.43.0",  # SHAP values
    "lime>=0.2.0.1",  # Local interpretability
    "eli5>=0.13.0",  # Model explanation

    # Hyperparameter Tuning
    "optuna>=3.4.0",  # Bayesian optimization
    "hyperopt>=0.2.7",

    # Model Evaluation & Metrics
    "yellowbrick>=1.5",  # ML visualization

    # Feature Engineering
    "feature-engine>=1.6.0",

    # Statistical Analysis
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",

    # Progress Bars
    "tqdm>=4.66.0",

    # Utilities
    "joblib>=1.3.0",  # Model serialization
    "python-dotenv>=1.0.0",  # Environment variables
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",

    # Code Quality
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "pylint>=3.0.0",

    # Documentation
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
]

reporting = [
    # Advanced Reporting
    "sweetviz>=2.3.0",  # Automated EDA
    "ydata-profiling>=4.6.0",  # Comprehensive EDA reports (antes pandas-profiling)
    "dtale>=3.8.0",  # Interactive data exploration
]

export = [
    # Model Export & Deployment
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "mlflow>=2.9.0",  # Experiment tracking
]

all = [
    "heart-disease-classification[dev,reporting,export]"
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false